# segment-ne

./: .gitignore  Cargo.toml  README.md  flake.nix
benches/: sampling.rs
src/: data.rs  lik.rs  main.rs  mcmc.rs  observation.rs  optim.rs  optimize.rs  parameter.rs  skyline.rs
src/mcmc/: lik.rs
