[package]
name = "segment-ne"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
env_logger = { version = "0.11.8", features = ["humantime"] }
itertools = "0.14.0"
log = "0.4.29"
logsumexp = "0.1.0"
ndarray = "0.17"
polars = { version = "0.52.0", features = [
    "lazy",
    "timezones",
    "performant",
    "parquet",
] }
rand = { version = "0.9.2", features = ["small_rng"] }
rand_distr = "0.5.1"
scirs2-optimize = "0.1.0-rc.2"
xsf = "0.3.6"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "sampling"
harness = false
