[package]
name = "segment-ne"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
color-eyre = "0.6.5"
env_logger = { version = "0.11.8", features = ["humantime"] }
indicatif = "0.18.3"
indicatif-log-bridge = "0.2.3"
itertools = "0.14.0"
log = "0.4.29"
logsumexp = "0.1.0"
ndarray = "0.17"
polars = { version = "0.52.0", features = [
    "lazy",
    "timezones",
    "performant",
    "parquet",
] }
rand = { version = "0.10.0" }
rand_distr = "0.6.0"
rayon = "1.11.0"
scirs2-optimize = "0.2.0"
xsf = "0.3.6"

[dev-dependencies]
criterion = "0.8"
